# sdf-cot-monitorability

./: .gitignore  .gitmodules  ARCHITECTURE.md  GETTING_STARTED.md  PHASE1_COMPLETE.md  README.md  plot_results.ipynb  pyproject.toml  pyrightconfig.json
configs/: baseline_experiment.yaml  example.yaml  strictness_experiment.yaml  strictness_experiment_gpt4.yaml
scripts/: run_baseline_experiment.py  run_baseline_experiment.sh  run_experiment.py  run_experiment.sh  run_strictness_experiment.py  setup.sh  test_installation.py  test_instruction_prompts.py
sdf_cot_monitorability/: __init__.py  prompts.py  utils.py
sdf_cot_monitorability.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sdf_cot_monitorability/evaluation/: __init__.py  impossiblebench_runner.py  instruction_prompts.py
sdf_cot_monitorability/monitor/: __init__.py  cot_monitor.py
tests/: test_hello.py
