[project]
name = "sdf-cot-monitorability"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "poethepoet>=0.38.0",
    "pyright>=1.1.407",
    "pytest>=9.0.1",
    "ruff>=0.14.6",
]
