[project]
name = "sdf-cot-monitorability"
version = "0.1.0"
description = "SDF CoT Monitorability"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "poethepoet>=0.38.0",
    "pyright>=1.1.407",
    "pytest>=9.0.1",
    "ruff>=0.14.6",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
# a sensible starter set; adjust as you like
select = ["A","E","F","I","N","UP","B","T100"]

[tool.pytest.ini_options]
pythonpath = [".", "sdf_cot_monitorability"]
addopts = "-q"

[tool.poe.tasks]
fmt = "ruff format"
lint = "ruff check --fix"
check = "pyright"
test = "pytest"
all = [{ref="fmt"}, {ref="lint"}, {ref="check"}, {ref="test"}]
